svn HEAD
 Enhancements
 * setuptools support added for setup.py. (Thanks, dcolish!)
 * Calendar service supports multiple calendar operations.
 * More results are returned by queries, and control over number of results given to user with config file options.
 * Added --format as optional option to docs upload and download.
 * Behavior of --date option for calendar service improved.

 Bugfixes
 * Uploads to folders supported for more recent versions of gdata-python-client.
 * Gdata dependency added to setup.py.
 * Asking for help on a non-existant service cleanly and helpfully exits. (Thanks, ferranb!)
 * Errors encountered while uploading to Picasa are printed correctly rather than crashing. (Thanks, bartosh!)
 * Uploading files to Docs without extensions obeys --format or assumes an extension.

version 0.9.7
 Enhancements:
 * Command history added to interactive mode (Thanks, aripollak!)
 * Make "--date 2010-06-19" specify a single day instead of a range starting on that date.
 * Add *-groups tasks to contacts service, start to move away from --title.
   (thanks, ericvw!)

 Bugfixes:
 * Browser launch for authentication more reliable.

version 0.9.5
 Bugfixes:
 * YouTube list task does not raise RequestError complaining about max-results.

version 0.9.4
 Enhancements:
 * Docs "edit" task will create a document if user specifies a non-existent document.
 * Added --draft flag so that Blogger "post" task can post drafts.
 * Blogger tasks no longer force user to fill out --blog option.

 Bugfixes:
 * Getting events no longer omits or includes events in or out of the given date range, respectively.
 * DeprecationWarning no longer appears during docs upload for users with more recent python gdata libraries.

version 0.9.2
 Enhancements:
 * Fixes to Debian packaging.

version 0.9.1
 Enhancements:
 * Posting photos to an ambiguous album title prompts user to select album, rather than failing.

 Bugfixes:
 * Tasks with no required options do not raise TypeError exceptions.